--- a/package.json
+++ b/package.json
@@ -23,6 +23,8 @@
     "babel-eslint": "^10.1.0",
     "eslint": "^6.7.2",
     "eslint-plugin-vue": "^6.2.2",
+    "sass": "^1.43.4",
+    "sass-loader": "10.1.1",
     "typescript": "~4.1.5",
     "vue-template-compiler": "^2.6.11"
   },
