--- a/package.json
+++ b/package.json
@@ -11,7 +11,8 @@
     "core-js": "^3.6.5",
     "vue": "^2.6.11",
     "vue-gapi": "^1.0.0",
-    "vue-markdown-render": "^1.1.3"
+    "vue-markdown-render": "^1.1.3",
+    "vue-toast-notification": "^0.6"
   },
   "devDependencies": {
     "@types/gapi": "^0.0.41",
